# Project32

./: .gitignore  LICENSE  README.md
Project32/: CMakeLists.txt  Project32.sln
Project32/Project32/: Suffring Rock.vcxproj  Suffring Rock.vcxproj.filters  imgui.ini
Project32/Project32.API/: CMakeLists.txt  Project32.API.vcxproj  Project32.API.vcxproj.filters
Project32/Project32.API/src/: Project32.API.cpp  Project32.API.h
Project32/Project32.App/: CMakeLists.txt  Project32.App.vcxproj  imgui.ini
Project32/Project32.App/res/shaders/: pbr_shadow.frag  pbr_shadow.vert  solidcolor.frag  solidcolor.vert  texture.vert
Project32/Project32.App/scripts/: floor.lua  game_hud.lua  init.lua  player_fps.lua  rotating_cube.lua
Project32/Project32.App/src/: main.cpp
Project32/Project32.Core/: CMakeLists.txt  Project32.Core.vcxproj  Project32.Core.vcxproj.filters
Project32/Project32.Core/src/: GL.cpp  GL.h  camera.cpp  camera.h  common.cpp  common.h  dllmain.cpp  engine.cpp  engine.h  engine_api.h  game.cpp  game.h  input.cpp  input.h  main.cpp  math.h  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  player.cpp  player.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  skybox.cpp  skybox.h  textures.cpp  textures.h  timer.hpp  ui.cpp  ui.h  util.hpp  wall.cpp  wall.h  (+2 more)
Project32/Project32.Core/src/BackEnd/: backend.cpp  backend.h  backend.hpp  common.h  types.cpp  types.h
Project32/Project32.Core/src/BackEnd/OpenGL/: GL_backEnd.cpp  GL_backEnd.h  GL_common.h  GL_util.cpp  GL_util.h
Project32/Project32.Core/src/BackEnd/OpenGL/Types/: GL_mesh.cpp  GL_mesh.h  GL_shader.cpp  GL_shader.h  GL_shadow.cpp  GL_shadow.h  GL_skybox.cpp  GL_skybox.h  GL_textures.cpp  GL_textures.h
Project32/Project32.Core/src/common/: glfw_fwd.h  time.cpp  time.h
Project32/Project32.Core/src/core/: context_guard.cpp  context_guard.h  engine.cpp  engine.h  input.cpp  input.h  ui.cpp  ui.h  ui_app.cpp  ui_app.h  window.cpp  window.h
Project32/Project32.Core/src/io/: filesystem.cpp  filesystem.h  manifest.cpp  manifest.h
Project32/Project32.Core/src/modules/: ModuleManager.cpp  ModuleManager.h
Project32/Project32.Core/src/project/: project.cpp  project.h  project_manager.cpp  project_manager.h
Project32/Project32.Core/src/renderer/: lighting.h  render_data.cpp  render_data.h  renderer.cpp  renderer.h  vertex.h
Project32/Project32.Core/src/scene/: camera.cpp  camera.h  model.cpp  model.h  object.cpp  object.h  scene.cpp  scene.h  transform.h  wall.cpp  wall.h
Project32/Project32.Core/src/scripting/: script_system.cpp  script_system.h
Project32/Project32.Core/src/types/: constants.h  math.h  timer.hpp  util.hpp
Project32/Project32.Editor/: CMakeLists.txt  Editor.cpp  Editor.h  Project32.Editor.vcxproj  Project32.Editor.vcxproj.filters  main.cpp
Project32/Project32.Renderer/: CMakeLists.txt  Project32.Renderer.vcxproj  Project32.Renderer.vcxproj.filters  main.cpp
Project32/Project32.Renderer.DX12/: CMakeLists.txt  Project32.Renderer.DX12.vcxproj
Project32/Project32.Renderer.OpenGL/: CMakeLists.txt  Project32.Renderer.OpenGL.vcxproj  Project32.Renderer.OpenGL.vcxproj.filters
Project32/Project32.Renderer.OpenGL/src/: GL_backEnd.cpp  GL_backEnd.h  GL_common.h  GL_util.cpp  GL_util.h
Project32/Project32.Renderer.OpenGL/src/Types/: GL_mesh.cpp  GL_mesh.h  GL_shader.cpp  GL_shader.h  GL_shadow.cpp  GL_shadow.h  GL_skybox.cpp  GL_skybox.h  GL_textures.cpp  GL_textures.h
Project32/Project32.Renderer.Vulkan/: CMakeLists.txt  Project32.Renderer.Vulkan.vcxproj
Project32/Project32.Renderer/src/: backend.cpp  backend.h  interface.h  main.cpp  r_common.cpp  r_common.h  types.cpp  types.h
Project32/Project32.Renderer/src/OpenGL/: GL_backEnd.cpp  GL_backEnd.h  GL_util.cpp  GL_util.h
Project32/Project32.Renderer/src/OpenGL/Types/: GL_mesh.cpp  GL_mesh.h  GL_shader.cpp  GL_shader.h  GL_shadow.cpp  GL_shadow.h  GL_skybox.cpp  GL_skybox.h  GL_textures.cpp  GL_textures.h
Project32/Project32.UIX/: Project32.UIX.vcxproj  Project32.UIX.vcxproj.filters
Project32/Project32.UIX/src/: UIX.cpp  UIX.h
Project32/Project32/res/: scene.json
Project32/Project32/res/shaders/: skybox.vert  solidcolor.frag  solidcolor.vert
Project32/Project32/src/: GL.cpp  GL.h  camera.cpp  camera.h  common.h  game.cpp  game.h  input.cpp  input.h  main.cpp  math.h  mesh.cpp  mesh.h  model.cpp  model.h  player.cpp  player.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  skybox.cpp  textures.cpp  textures.h  util.hpp  wall.cpp  wall.h
